hot fix for racing page track conditions break at 1070px

--- a/wp-content/themes/suffolkdown/assets/styles/suffolkdown.css
+++ b/wp-content/themes/suffolkdown/assets/styles/suffolkdown.css
@@ -1062,6 +1062,15 @@ p {
 	}
 }
 
+@media screen and (max-width: 1070px) {
+	.page-template-page-racing .entry-content-inner {
+    float: left;
+    padding: 0 15px;
+    max-width: calc(1200px - 550px);
+    width: calc(100% - 100px);
+	}
+}
+
 @media screen and (max-width: 992px) {
 
 	/* Header Section */
